--- a/index.html
+++ b/index.html
@@ -7,59 +7,65 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-      <a class="main-navigation-logo" href="#">
-        <img class="main-header-logo" src="#" alt="логотип города Седона">
-      </a>
-      <ul class="main-navigation-list">
-      <li class="main-navigation-item">
-        <a class="main-navigation-link" href="">Главная</a>
-      </li>
-      <li class="main-navigation-item">
-        <a class="main-navigation-link" href="#">О Седоне</a>
-      </li>
-      <li class="main-navigation-item">
-        <a class="main-navigation-link" href="catalog.html">Гостиницы</a>
-      </li>
-      </ul>
-    <ul class="main-navigation-list navigation-user">
-      <li class="navigation-item">
-        <a class="navigation-link" href="#">
-        <span class="visually-hidden">Поиск</span></a>
-      </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="#">
-          <span class="visually-hidden">Избранное</span>
-          <span class="notification-badge">12</span>
-      </a>
-      </li>
-    </ul>
-      <a class="navigation-button" href="#">Хочу сюда!</a>
+        <a class="main-navigation-logo-link" href="#">
+          <img class="main-navigation-logo" src="#" alt="логотип города Седона">
+        </a>
+        <ul class="main-navigation-list">
+          <li class="main-navigation-item">
+            <a class="main-navigation-link active" href="">Главная</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-user-list">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+              <span class="notification-badge">12</span>
+            </a>
+          </li>
+        </ul>
+        <a class="button button-navigation" href="#">Хочу сюда!</a>
       </nav>
-      </header>
+    </header>
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Седона — город в Аризоне</h1>
       </section>
     <section class="advantages">
-      <p class="lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-    <h2 class="visually-hidden">Преимущества</h2>
-    <ul class="advantages-list">
-    <li class="advantages-item">
-    <h3 class="advantages-title">Настоящий городок</h3>
-    <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p></li>
-    <li class="advantages-item">
-    <h3 class="advantages-title">Небольшая площадь</h3>
-    <p class="advantages-description">Все достопримечательности находятся очень близко</p></li>
-    <li class="advantages-item">
-    <h3 class="advantages-title">Красивая дорога</h3>
-    <p class="advantages-description">Ехать в Седону из Лас-Вегасе совсем не скучно!</p></li>
-    <li class="advantages-item">
-    <h3 class="advantages-title">Мало туристов</h3>
-      <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p></li>
-    <li class="advantages-item">
-    <h3 class="advantages-title">Там есть мост дьявола</h3>
-      <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p></li>
+      <p class="advantages-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p class="advantages-lead-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="advantages-list">
+        <li class="advantages-item">
+          <h3 class="advantages-title">Настоящий городок</h3>
+          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Небольшая площадь</h3>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Красивая дорога</h3>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегасе совсем не скучно!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">Мало туристов</h3>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+        <li class="advantages-item">
+        <h3 class="advantages-title">Там есть мост дьявола</h3>
+        <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </li>
     </ul>
     </section>
     <section class="infrastructure">
@@ -84,37 +90,43 @@
     <section class="search">
       <h2 class="search-title">Заинтересовались?</h2>
       <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
+      <a class="button button-search" href="catalog.html">Поиск гостиницы в Седоне</a>
     </section>
     <section class="subcribe">
       <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
       <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
         <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="email">
-        <button class="button newsletter-button" type="submit">Подписаться</button>
+        <button class="button button-newsletter" type="submit">Подписаться</button>
       </form>
     </section>
     </main>
+  </body>
     <footer class="main-footer">
-      <section class="contacts">
+      <section class="social-media">
         <h2 class="visually-hidden">Контактные данные</h2>
         <ul class="contacts-social-list">
           <li class="contacts-social-item">
-            <a class="button social-button" href="#">
+            <a class="button button-social" href="#">
               <span class="visually-hidden">Vkontakte</span></a>
           </li>
           <li class="contacts-social-item">
-            <a class="button social-button" href="#">
+            <a class="button button-social" href="#">
               <span class="visually-hidden">Telegram</span></a>
           </li>
           <li class="contacts-social-item">
-            <a class="button social-button" href="#">
+            <a class="button button-social" href="#">
               <span class="visually-hidden">YouTube</span></a>
           </li>
         </ul>
+      </section>
+      <section class="contacts">
         <a class="contacts-phone" href="tel:+78005558628">+7 (812) 812-12-12</a>
       </section>
-      <img class="watermark" src="#" alt="логотип онлайн-школы HTML Academy">
+      <section class="author">
+      <a class="watermark" href="https://htmlacademy.ru">
+        <img class="creator" src="#" alt="логотип онлайн-школы HTML Academy">
+      </a>
+      </section>
     </footer>
-      </body>
     </html>
