Добавляет вторую исправленную разметку

--- a/catalog.html
+++ b/catalog.html
@@ -12,43 +12,58 @@
     </a>
     <ul class="main-navigation-list">
     <li class="main-navigation-item">
-      <a class="main-navigation-link" href="index.html">Главная</a>
+      <a class="main-navigation-link" href="index.html">Главная
+      </a>
     </li>
     <li class="main-navigation-item">
-      <a class="main-navigation-link" href="#">О Седоне</a>
+      <a class="main-navigation-link" href="#">О Седоне
+      </a>
     </li>
     <li class="main-navigation-item">
-      <a class="main-navigation-link active" href="">Гостиницы</a>
+      <a class="main-navigation-link active" href="">Гостиницы
+      </a>
     </li>
     </ul>
     <ul class="main-navigation-list navigation-user">
     <li class="navigation-item">
       <a class="navigation-link" href="#">
-      <span class="visually-hidden">Поиск</span></a>
+        <span class="visually-hidden">Поиск
+        </span>
+      </a>
     </li>
     <li class="navigation-item">
       <a class="navigation-link" href="#">
-        <span class="visually-hidden">Избранное</span>
-        <span class="notification-badge">12</span></a>
+        <span class="visually-hidden">Избранное
+        </span>
+        <span class="notification-badge">12
+        </span>
+      </a>
     </li>
     </ul>
-    <a class="button button-navigation" href="#">Хочу сюда!</a>
+    <a class="button button-navigation" href="#">Хочу сюда!
+    </a>
     </nav>
     </header>
     <main class="inner-main">
       <header class="inner-header">
-        <h1 class="inner-header-title">Гостиницы Седона</h1>
+        <h1 class="inner-header-title">Гостиницы Седона
+        </h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
+            <a class="breadcrumbs-link" href="index.html">
+              <span class="visually-hidden">Главная
+              </span>
+            </a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Гостиницы</a>
+            <a class="breadcrumbs-link">Гостиницы
+            </a>
           </li>
         </ul>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group">
-          <legend class="catalog-filter-title">Инфраструктура:</legend>
+          <legend class="catalog-filter-title">Инфраструктура:
+          </legend>
           <ul class="catalog-filter-list">
             <li class="catalog-filter-item">
               <label class="control">
@@ -71,7 +86,8 @@
           </ul>
         </fieldset>
         <fieldset class="catalog-filter-group">
-          <legend class="catalog-filter-title">Тип жилья:</legend>
+          <legend class="catalog-filter-title">Тип жилья:
+          </legend>
           <ul class="catalog-filter-list">
             <li class="catalog-filter-item">
               <label class="control">
@@ -93,123 +109,173 @@
             </li>
           </ul>
         </fieldset>
-        <button class="button button-submit" type="submit">Применить</button>
-        <button class="button button-reset" type="reset">Сбросить</button>
+        <button class="button button-submit" type="submit">Применить
+        </button>
+        <button class="button button-reset" type="reset">Сбросить
+        </button>
       </form>
       </header>
       <section class="catalog-product">
         <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешевые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="popular">Сначала популярные</option>
+          <option value="cheap">Сначала дешевые
+          </option>
+          <option value="expensive">Сначала дорогие
+          </option>
+          <option value="popular">Сначала популярные
+          </option>
         </select>
-        <p class="result">Найдено гостиниц: 38</p>
+        <p class="result">Найдено гостиниц: 38
+        </p>
         <a class="button button-light-active" href="#">
-          <span class="visually-hidden">Показать карточки</span>
+          <span class="visually-hidden">Показать карточки
+          </span>
         </a>
         <a class="button button-light" href="#">
-          <span class="visually-hidden">Показать плитки</span>
+          <span class="visually-hidden">Показать плитки
+          </span>
         </a>
         <a class="button button-light" href="#">
-          <span class="visually-hidden">Показать список</span>
+          <span class="visually-hidden">Показать список
+          </span>
         </a>
       <ul class="product-list">
         <li class="product-item">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="#" alt="скалы каньона">
-            <h3 class="product-card-title">Amara Resort & Spa</h3>
+            <h3 class="product-card-title">Amara Resort & Spa
+            </h3>
           </a>
-          <p>Гостиница</p>
-          <p>От 4000 ₽</p>
-          <a class="button button-details" href="#">Подробнее</a>
-          <a class="button button-favourite" href="#">В избранное</a>
-          <p class="rating">Рейтинг: 8,5</p>
+          <p>Гостиница
+          </p>
+          <p>От 4000 ₽
+          </p>
+          <a class="button button-details" href="#">Подробнее
+          </a>
+          <a class="button button-favourite" href="#">В избранное
+          </a>
+          <p class="rating">Рейтинг: 8,5
+          </p>
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="#" alt="скалы каньона">
-            <h3 class="product-card-title">Villas at Poco Diablo</h3>
+            <h3 class="product-card-title">Villas at Poco Diablo
+            </h3>
           </a>
-          <p>Гостиница</p>
-          <p>От 5000 ₽</p>
-          <a class="button button-details" href="#">Подробнее</a>
-          <a class="button button-favourite-active" href="#">В избранное</a>
-          <p class="rating">Рейтинг: 9,2</p>
+          <p>Гостиница
+          </p>
+          <p>От 5000 ₽
+          </p>
+          <a class="button button-details" href="#">Подробнее
+          </a>
+          <a class="button button-favourite-active" href="#">В избранное
+          </a>
+          <p class="rating">Рейтинг: 9,2
+          </p>
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="#" alt="скалы каньона">
-            <h3 class="product-card-title">Desert Quail Inn</h3>
+            <h3 class="product-card-title">Desert Quail Inn
+            </h3>
           </a>
-          <p>Гостиница</p>
-          <p>От 2500 ₽</p>
-          <a class="button button-details" href="#">Подробнее</a>
-          <a class="button button-favourite" href="#">В избранное</a>
-          <p class="rating">Рейтинг: 6,9</p>
+          <p>Гостиница
+          </p>
+          <p>От 2500 ₽
+          </p>
+          <a class="button button-details" href="#">Подробнее
+          </a>
+          <a class="button button-favourite" href="#">В избранное
+          </a>
+          <p class="rating">Рейтинг: 6,9
+          </p>
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
             <img class="product-card-image" src="#" alt="гостиница GreenTree Inn">
-            <h3 class="product-card-title">GreenTree Inn</h3>
+            <h3 class="product-card-title">GreenTree Inn
+            </h3>
           </a>
-          <p>Гостиница</p>
-          <p>От 1500 ₽</p>
-          <a class="button button-details" href="#">Подробнее</a>
-          <a class="button button-favourite" href="#">В избранное</a>
-          <p class="rating">Рейтинг: 5,0</p>
+          <p>Гостиница
+          </p>
+          <p>От 1500 ₽
+          </p>
+          <a class="button button-details" href="#">Подробнее
+          </a>
+          <a class="button button-favourite" href="#">В избранное
+          </a>
+          <p class="rating">Рейтинг: 5,0
+          </p>
         </li>
       </ul>
       <ul class="pagination">
         <li class="pagination-item">
-          <a class="pagination-link pagination-current">1</a>
+          <a class="pagination-link pagination-current">1
+          </a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">2</a>
+          <a class="pagination-link" href="#">2
+          </a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">3</a>
+          <a class="pagination-link" href="#">3
+          </a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">4</a>
+          <a class="pagination-link" href="#">4
+          </a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link pagination-ellipsis" href="">...</a>
+          <a class="pagination-link pagination-ellipsis" href="">...
+          </a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">10</a>
+          <a class="pagination-link" href="#">10
+          </a>
         </li>
       </ul>
       </section>>
       <section class="subcribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="subscribe-title">Подпишитесь на рассылку
+        </h2>
+        <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
           <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="email">
-          <button class="button button-newsletter" type="submit">Отправить</button>
+          <button class="button button-newsletter" type="submit">Отправить
+          </button>
         </form>
       </section>
     </main>
   </body>
     <footer class="main-footer">
       <section class="social-media">
-        <h2 class="visually-hidden">Контактные данные</h2>
+        <h2 class="visually-hidden">Контактные данные
+        </h2>
         <ul class="contacts-social-list">
           <li class="contacts-social-item">
             <a class="button button-social" href="#">
-              <span class="visually-hidden">Vkontakte</span></a>
+              <span class="visually-hidden">Vkontakte
+              </span>
+            </a>
           </li>
           <li class="contacts-social-item">
             <a class="button button-social" href="#">
-              <span class="visually-hidden">Telegram</span></a>
+              <span class="visually-hidden">Telegram
+              </span>
+            </a>
           </li>
           <li class="contacts-social-item">
             <a class="button button-social" href="#">
-              <span class="visually-hidden">YouTube</span></a>
+              <span class="visually-hidden">YouTube
+              </span>
+            </a>
           </li>
         </ul>
       </section>
       <section class="contacts">
-        <a class="contacts-phone" href="tel:+78005558628">+7 (812) 812-12-12</a>
+        <a class="contacts-phone" href="tel:+78005558628">+7 (812) 812-12-12
+        </a>
       </section>
       <section class="author">
       <a class="watermark" href="https://htmlacademy.ru">
