--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
         </select>
         <p class="result">Найдено гостиниц: 38
         </p>
-        <a class="view-item-active" href="#">
+        <a class="view-item  view-item-active" href="#">
           <img src="img/catalog/card.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать карточки
           </span>
